# rvc

./: .dockerignore  .gitignore  .gitleaks-emitted.toml  .gitleaks.toml  .gitleaksignore  ARCHITECTURE.md  CODE_REVIEW_REPORT.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  REVIEW.md  cargo_audit.json  clippy.toml  config.example.toml  docker-compose.yml
crates/beacon/: Cargo.toml
crates/beacon/src/: client.rs  error.rs  http_caps.rs  lib.rs  ssz_deser.rs  types.rs
crates/beacon/tests/: body_cap_h12.rs  error_body_cap.rs  ssz_body_cap.rs
crates/block-service/: Cargo.toml
crates/block-service/src/: error.rs  lib.rs  service.rs  traits.rs  types.rs  validation.rs
crates/block-service/tests/: symbol_grep.rs
crates/bn-manager/: Cargo.toml
crates/bn-manager/src/: broadcast.rs  error.rs  health.rs  lib.rs  manager.rs  sse.rs  sync_status.rs  traits.rs  types.rs
crates/bn-manager/tests/: body_cap.rs  sse_consumer_exit.rs  sse_oversize_h11.rs
crates/builder/: Cargo.toml
crates/builder/src/: circuit_breaker.rs  lib.rs  service.rs
crates/builder/tests/: circuit_breaker_ordering_m3.rs
crates/crypto/: Cargo.toml
crates/crypto/examples/: log_sample.rs
crates/crypto/src/: aggregation_signing.rs  block_signing.rs  bls.rs  builder_signing.rs  composite_signer.rs  decryption_tracker.rs  eip2333.rs  error.rs  hex.rs  insecure.rs  key_manager.rs  keystore.rs  lib.rs  logging.rs  mnemonic.rs  pubkey.rs  remote_signer.rs  signer_trait.rs  signing.rs  sync_signing.rs  typed_signer.rs  voluntary_exit_signing.rs
crates/crypto/tests/: canonical_pubkey.rs  insecure_gate.rs  parallel_load.rs  remote_signer_h10.rs  typed_signer_local_golden.rs
crates/doppelganger/: Cargo.toml
crates/doppelganger/src/: enablement.rs  error.rs  forward_window.rs  lib.rs  service.rs  state.rs  traits.rs
crates/doppelganger/tests/: clock_m7.rs  forward_window_missing_liveness.rs  forward_window_pre_genesis.rs  forward_window_satisfaction.rs
crates/duty-tracker/: Cargo.toml
crates/duty-tracker/src/: error.rs  lib.rs  tracker.rs
crates/eth-types/: Cargo.toml
crates/eth-types/src/: aggregation.rs  attestation.rs  block.rs  builder.rs  deposit.rs  domains.rs  duties.rs  fork.rs  hex_fixed.rs  insecure.rs  lib.rs  serde_signature.rs  ssz_helpers.rs  sync_committee.rs  tree_hash_utils.rs
crates/eth-types/src/canonical/: gvr_hex.rs  mod.rs  pubkey_hex.rs  signing_root_hex.rs
crates/eth-types/tests/: block_and_blobs_l3.rs  canonical_skeleton.rs  insecure_gate.rs
crates/grpc-signer/: Cargo.toml  build.rs
crates/grpc-signer/src/: client.rs  lib.rs
crates/grpc-signer/tests/: integration.rs  plaintext_url_h10.rs  proto_v2_contract.rs
crates/keymanager-api/: Cargo.toml
crates/keymanager-api/src/: auth.rs  error.rs  gate.rs  handlers.rs  lib.rs  server.rs  traits.rs  types.rs  url_validator.rs
crates/keymanager-api/tests/: delete_export_error_fail_closed.rs  error_sanitization_m8.rs  km2_cancel_token_race.rs  post_import_doppelganger_m12.rs  set_attesting_m9.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: definitions.rs  lib.rs  server.rs
crates/propagator/: Cargo.toml
crates/propagator/src/: error.rs  lib.rs
crates/rvc/: Cargo.toml
crates/rvc/benches/: per_slot.rs
crates/rvc/src/: beacon_adapter.rs  config_url.rs  doppelganger_adapter.rs  keymanager_adapters.rs  lib.rs  monitoring.rs  prepare_exit.rs  slashing_monitor.rs  startup.rs  submit_exit.rs
crates/rvc/src/beacon/: client.rs  mod.rs  types.rs
crates/rvc/src/config/: builder.rs  error.rs  mod.rs  network.rs  types.rs
crates/rvc/src/crypto/: bls.rs  error.rs  key_manager.rs  keystore.rs  mod.rs  signing.rs  types.rs
crates/rvc/src/duty_tracker/: error.rs  mod.rs  tracker.rs
crates/rvc/src/metrics/: definitions.rs  mod.rs  server.rs
crates/rvc/src/orchestrator/: aggregation.rs  attestation.rs  coordinator.rs  duty_management.rs  error.rs  mod.rs  service.rs  slot_context.rs  sync_committee.rs  utils.rs
crates/rvc/tests/: attestation_data_validation_m2.rs  no_head_literal_l5.rs  post_import_doppelganger_signing_block_m12.rs  sync_independent_of_attesting.rs  zero_alloc.rs
crates/secret-provider/: Cargo.toml
crates/secret-provider/src/: format.rs  gcp.rs  key_source_manager.rs  lib.rs  metrics.rs  refresh.rs
crates/secret-provider/tests/: integration.rs  tracing_hierarchy.rs
crates/signer/: Cargo.toml
crates/signer/benches/: sign_path.rs
crates/signer/src/: enablement.rs  error.rs  fail_closed.rs  gate.rs  lib.rs  locks.rs  non_slashable.rs  slashable.rs  traits.rs
crates/signer/tests/: gate_aggregate_no_slashing_db.rs  gate_attestation_doppelganger_blocked.rs  gate_attestation_happy_path.rs  gate_block_doppelganger_blocked.rs  gate_per_validator_lock.rs  gate_sign_timeout.rs  gate_sync_doppelganger_blocked.rs  gate_unknown_pubkey_fails_closed.rs  integration_block_routed_through_gate.rs  log_sampling_disabled.rs  log_sampling_volume.rs  m6_gate_per_path.rs  no_direct_composite_signer_outside_signer.rs  phantom_row_m1.rs  trait_skeletons.rs  tx_hold_metric.rs  voluntary_exit_discard.rs  zero_alloc.rs
crates/slashing/: Cargo.toml
crates/slashing/src/: audit.rs  db.rs  error.rs  lib.rs  migration.rs  reader.rs  scoped.rs  stage.rs  types.rs
crates/slashing/tests/: conformance.rs  gvr_recheck_m6.rs  migration.rs  migration_v3_cases.rs  normalize_parity.rs  proptest_slashing.rs  pubkey_scope_cross_cn.rs  reader_skeleton.rs  sidecar_perms_l8.rs  stage.rs  wal_hard_fail.rs
crates/sync-service/: Cargo.toml
crates/sync-service/src/: error.rs  lib.rs
crates/sync-service/tests/: per_validator_isolation.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: config.rs  file_appender.rs  format.rs  init.rs  lib.rs  propagation.rs  shutdown.rs
crates/telemetry/tests/: reload_zero_alloc.rs  shutdown_test.rs
crates/timing/: Cargo.toml
crates/timing/src/: clock.rs  error.rs  lib.rs  timer.rs
crates/timing/tests/: timing_m11.rs
crates/validator-store/: Cargo.toml
crates/validator-store/src/: block_selection.rs  config.rs  error.rs  lib.rs  store.rs
docs/: PROGRESS.md  (+7 more)
(+138 files in other folders)
