[workspace]
members = ["bin/rvc", "crates/rvc", "crates/beacon-client"]
default-members = ["bin/rvc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rootwarp/rvc"

[workspace.dependencies]
# Internal
rvc = { path = "crates/rvc" }
beacon-client = { path = "crates/beacon-client" }

# External
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Crypto
blst = "0.3"
hex = "0.4"
rand = "0.8"
ssz = { package = "ethereum_ssz", version = "0.9" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.9" }
sha2 = "0.10"

# Dev dependencies
wiremock = "0.6"

[workspace.dependencies.tonic-build]
version = "0.12"
