[workspace]
members = ["bin/rvc", "crates/rvc", "crates/beacon", "crates/eth-types", "crates/metrics", "crates/slashing", "crates/timing", "crates/crypto", "crates/duty-tracker", "crates/propagator", "crates/signer", "crates/validator-store", "crates/block-service"]
default-members = ["bin/rvc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rootwarp/rvc"

[workspace.dependencies]
# Internal
rvc = { path = "crates/rvc" }
beacon = { path = "crates/beacon" }
eth-types = { path = "crates/eth-types", package = "rvc-eth-types" }
metrics = { path = "crates/metrics", package = "rvc-metrics" }
slashing = { path = "crates/slashing", package = "rvc-slashing" }
timing = { path = "crates/timing", package = "rvc-timing" }
crypto = { path = "crates/crypto", package = "rvc-crypto" }
duty-tracker = { path = "crates/duty-tracker", package = "rvc-duty-tracker" }
propagator = { path = "crates/propagator", package = "rvc-propagator" }
signer = { path = "crates/signer", package = "rvc-signer" }
validator-store = { path = "crates/validator-store", package = "rvc-validator-store" }
block-service = { path = "crates/block-service", package = "rvc-block-service" }

# External
async-trait = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.5"

# Serde utils
ethereum_serde_utils = "0.8"

# Crypto
blst = "0.3"
hex = "0.4"
rand = "0.8"
ssz = { package = "ethereum_ssz", version = "0.9" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.9" }
tree_hash = "0.9"
tree_hash_derive = "0.9"
sha2 = "0.10"
scrypt = "0.11"
pbkdf2 = "0.12"
aes = "0.8"
ctr = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Dev dependencies
tempfile = "3"
wiremock = "0.6"

[workspace.dependencies.tonic-build]
version = "0.12"
