[workspace]
members = ["bin/rvc", "bin/rvc-keygen", "bin/rvc-signer", "crates/rvc", "crates/beacon", "crates/bn-manager", "crates/builder", "crates/doppelganger", "crates/eth-types", "crates/grpc-signer", "crates/keymanager-api", "crates/metrics", "crates/secret-provider", "crates/slashing", "crates/telemetry", "crates/timing", "crates/crypto", "crates/duty-tracker", "crates/propagator", "crates/signer", "crates/validator-store", "crates/block-service", "crates/sync-service"]
default-members = ["bin/rvc"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rootwarp/rvc"

[workspace.dependencies]
# Internal
rvc = { path = "crates/rvc" }
beacon = { path = "crates/beacon" }
eth-types = { path = "crates/eth-types", package = "rvc-eth-types" }
metrics = { path = "crates/metrics", package = "rvc-metrics" }
slashing = { path = "crates/slashing", package = "rvc-slashing" }
timing = { path = "crates/timing", package = "rvc-timing" }
crypto = { path = "crates/crypto", package = "rvc-crypto" }
duty-tracker = { path = "crates/duty-tracker", package = "rvc-duty-tracker" }
propagator = { path = "crates/propagator", package = "rvc-propagator" }
signer = { path = "crates/signer", package = "rvc-signer" }
validator-store = { path = "crates/validator-store", package = "rvc-validator-store" }
block-service = { path = "crates/block-service", package = "rvc-block-service" }
sync-service = { path = "crates/sync-service", package = "rvc-sync-service" }
bn-manager = { path = "crates/bn-manager", package = "rvc-bn-manager" }
builder = { path = "crates/builder", package = "rvc-builder" }
doppelganger = { path = "crates/doppelganger", package = "rvc-doppelganger" }
keymanager-api = { path = "crates/keymanager-api", package = "rvc-keymanager-api" }
telemetry = { path = "crates/telemetry", package = "rvc-telemetry" }
secret-provider = { path = "crates/secret-provider", package = "rvc-secret-provider" }
grpc-signer = { path = "crates/grpc-signer", package = "rvc-grpc-signer" }

# External
async-trait = "0.1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
parking_lot = "0.12"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.32"
clap = { version = "4", features = ["derive"] }
tonic = "0.12"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-eventsource = "0.6"

# OpenTelemetry
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "reqwest-client"] }

# Metrics
prometheus = { version = "0.14", default-features = false }
lazy_static = "1.5"

# Serde utils
ethereum_serde_utils = "0.8"

# Crypto
blst = "0.3"
hex = "0.4"
rand = "0.8"
ssz = { package = "ethereum_ssz", version = "0.9" }
ssz_derive = { package = "ethereum_ssz_derive", version = "0.9" }
tree_hash = "0.9"
tree_hash_derive = "0.9"
sha2 = "0.10"
url = "2"
scrypt = "0.11"
pbkdf2 = "0.12"
aes = "0.8"
ctr = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = "0.10"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
hkdf = "0.12"
num-bigint = "0.4"
bip39 = { version = "2.2", features = ["zeroize", "rand"] }
rpassword = "5"
tiny-keccak = { version = "2", features = ["keccak"] }
rayon = "1"
tokio-util = "0.7"
tokio-stream = "0.1"

# DVT (Distributed Validator Technology)
vsss-rs = { version = "5.3", default-features = false, features = ["std"] }
bls12_381_plus = "0.8"

# Bytes
bytes = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File locking
fd-lock = "4"

# System info
libc = "0.2"

# Log rotation
logroller = "0.1"
tracing-appender = "0.2"
flate2 = "1"

# X.509 parsing (pinned; used by rvc-signer audit/cn.rs — M-4 fix)
x509-parser = "0.16"

# Dev dependencies
tempfile = "3"
wiremock = "0.6"
proptest = "1"

[workspace.dependencies.tonic-build]
version = "0.12"
