[package]
name = "beacon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTTP client for Ethereum Beacon Node API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rootwarp/rvc"
keywords = ["ethereum", "beacon", "consensus", "validator"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
