[package]
name = "beacon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "HTTP client for Ethereum Beacon Node API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rootwarp/rvc"
keywords = ["ethereum", "beacon", "consensus", "validator"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
bytes = { workspace = true }
crypto = { workspace = true }
eth-types = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
telemetry = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tree_hash = { workspace = true }
wiremock = { workspace = true }
tracing-test = { workspace = true }
