[package]
name = "rvc-block-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
crypto.workspace = true
eth-types.workspace = true
hex.workspace = true
signer.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
validator-store.workspace = true

[dev-dependencies]
crypto = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt"] }
