[package]
name = "rvc-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
async-trait.workspace = true
blst.workspace = true
ctr.workspace = true
eth-types.workspace = true
hex.workspace = true
pbkdf2.workspace = true
rand.workspace = true
reqwest = { workspace = true }
scrypt.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
subtle.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
uuid.workspace = true
zeroize.workspace = true
hkdf.workspace = true
num-bigint.workspace = true
bip39.workspace = true
rayon.workspace = true

[features]
test-utils = []

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tracing-subscriber.workspace = true
wiremock.workspace = true
