[package]
name = "rvc-doppelganger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Doppelganger detection for Ethereum validator client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rootwarp/rvc"
keywords = ["ethereum", "validator", "doppelganger", "safety"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
crypto = { workspace = true }
eth-types = { workspace = true }
slashing = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
crypto = { workspace = true, features = ["test-utils"] }
slashing = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
