[package]
name = "rvc-duty-tracker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beacon.workspace = true
eth-types.workspace = true
metrics.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
wiremock.workspace = true
