[package]
name = "rvc-eth-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ethereum_serde_utils.workspace = true
hex.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
thiserror.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[dev-dependencies]
proptest.workspace = true
tracing-test = { workspace = true, features = ["no-env-filter"] }
# Independent SSZ-Merkleization oracle for the BeaconBlockHeader KAT (FR-31).
# Dev-only: not a production out-edge, so the architecture-tests
# zero-out-edge invariant for rvc-eth-types is unaffected.
sha2.workspace = true
