[package]
name = "rvc-grpc-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
crypto.workspace = true
eth-types.workspace = true
hex.workspace = true
prost.workspace = true
thiserror.workspace = true
tonic = { workspace = true, features = ["transport", "tls"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
rcgen = "0.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
