[package]
name = "rvc-keymanager-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
hex.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
http-body-util = "0.1"
hyper = "1"
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }
