[package]
name = "rvc-keymanager-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
crypto.workspace = true
eth-types.workspace = true
hex.workspace = true
metrics.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
url.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
axum = { workspace = true, features = ["macros"] }
parking_lot.workspace = true
http-body-util = "0.1"
hyper = "1"
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time", "test-util"] }
tower = { workspace = true, features = ["util"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
