[package]
name = "rvc-propagator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beacon.workspace = true
metrics.workspace = true
eth-types.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }
