[package]
name = "rvc-propagator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bn-manager.workspace = true
metrics.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
tracing-subscriber = { workspace = true, features = ["registry"] }
