[package]
name = "rvc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eth-types.workspace = true
axum.workspace = true
beacon.workspace = true
crypto.workspace = true
hex.workspace = true
lazy_static.workspace = true
metrics.workspace = true
prometheus.workspace = true
prost.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
timing.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
crypto = { workspace = true, features = ["test-utils"] }
tempfile.workspace = true
wiremock.workspace = true
