[package]
name = "rvc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
doppelganger.workspace = true
eth-types.workspace = true
beacon.workspace = true
bn-manager.workspace = true
block-service.workspace = true
crypto.workspace = true
duty-tracker.workspace = true
hex.workspace = true
metrics.workspace = true
propagator.workspace = true
prost.workspace = true
secrecy.workspace = true
signer.workspace = true
slashing.workspace = true
sync-service.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
timing.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tree_hash.workspace = true
validator-store.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
crypto = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
tempfile.workspace = true
wiremock.workspace = true
