[package]
name = "rvc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
builder.workspace = true
doppelganger.workspace = true
eth-types.workspace = true
beacon.workspace = true
bn-manager.workspace = true
block-service.workspace = true
crypto.workspace = true
duty-tracker.workspace = true
hex.workspace = true
keymanager-api.workspace = true
metrics.workspace = true
propagator.workspace = true
prost.workspace = true
secrecy.workspace = true
serde_json.workspace = true
signer.workspace = true
slashing.workspace = true
sync-service.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
timing.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tree_hash.workspace = true
url.workspace = true
validator-store.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
axum.workspace = true
crypto = { workspace = true, features = ["test-utils"] }
http-body-util = "0.1"
serde_json.workspace = true
tempfile.workspace = true
tower = { workspace = true, features = ["util"] }
tracing-subscriber = { workspace = true, features = ["registry", "fmt"] }
wiremock.workspace = true
