[package]
name = "rvc-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
crypto.workspace = true
eth-types.workspace = true
hex.workspace = true
metrics.workspace = true
slashing.workspace = true
thiserror.workspace = true

[dev-dependencies]
crypto = { workspace = true, features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt"] }
