[package]
name = "rvc-signer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
crypto.workspace = true
doppelganger.workspace = true
eth-types.workspace = true
hex.workspace = true
metrics.workspace = true
parking_lot.workspace = true
slashing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
crypto = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "fmt"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
criterion.workspace = true

# Latency-sanity companion to the Gate-4 zero-alloc test (issue 2.13). Run via
# `cargo bench`; NOT a blocking gate and NOT run under nextest/CI.
[[bench]]
name = "sign_path"
harness = false
