[package]
name = "rvc-slashing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crypto.workspace = true
eth-types.workspace = true
hex.workspace = true
metrics.workspace = true
parking_lot.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
tracing-subscriber = { workspace = true, features = ["registry"] }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
