[package]
name = "rvc-sync-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
eth-types = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
eth-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
