[package]
name = "rvc-timing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
eth-types.workspace = true
lazy_static.workspace = true
metrics.workspace = true
prometheus.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tracing-test = { workspace = true, features = ["no-env-filter"] }
