[package]
name = "rvc-validator-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
parking_lot.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
